# color-aimbot

./: .gitignore  CMakeLists.txt  README.md
arduino/colorbot_ethernet/: colorbot_ethernet.ino
arduino/colorbot_rawhid/: colorbot_rawhid.ino
src/: aim_controller.cpp  aim_controller.hpp  arduino_mouse.cpp  arduino_mouse.hpp  color_detector.cpp  color_detector.hpp  config.cpp  config.hpp  dxgi_capture.cpp  dxgi_capture.hpp  engine.cpp  engine.hpp  interfaces.hpp  main.cpp  rawhid_controller.cpp  rawhid_controller.hpp  screen_capture.cpp  screen_capture.hpp  serial_port.cpp  serial_port.hpp
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/electron/: main.cjs  preload.cjs
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/components/features/: ProfileSettings.tsx
ui/src/components/layout/: Sidebar.tsx
ui/src/components/ui/: Slider.tsx  Switch.tsx
ui/src/hooks/: useConfig.ts
